# os

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  OVMF.fd  OVMF_VARS-1024x768.fd  README.md  main.asm  main.rs  startup.nsh
.cargo/: config
.config/: config.toml
applications/: Cargo.toml
applications/hello_world/: Cargo.toml
gnu-efi/: Make.defaults
kernel/: Cargo.toml
libraries/: flightos.asmlib
multiboot-bootloader/: Cargo.toml
multiboot-bootloader/src/: main.rs
operating-system/: Cargo.toml  Makefile.toml  \  startup.nsh
operating-system/.cargo/: config
operating-system/src/: allocator.rs  kernel.rs  logging.rs  main.rs  mb2-entry.rs  uefi-bootloader.rs  uefi-entry.rs  uefi.rs  vga.rs
operating-system/src/Graphics/: mod.rs
operating-system/src/Terminal/: mod.rs
operating-system/src/acpi/: mod.rs
operating-system/src/entry/: logger.rs  memory_map.rs  mod.rs
operating-system/src/filesystem/: fat32.rs  mod.rs  ntfs.rs
operating-system/src/graphics/: fonts.rs  mod.rs  primitives.rs  screen.rs  window.rs
operating-system/src/interrupts/: apic.rs  mod.rs  system-calls.rs
operating-system/src/kernel/: allocator.rs  mapper.rs  mod.rs
operating-system/src/kernel/allocator/: mod.rs
operating-system/src/kernel/filesystem/: fat32.rs  ntfs.rs
operating-system/src/kernel/graphics/: buffer.rs  fonts.rs  mod.rs  screen.rs  vga.rs  window.rs
operating-system/src/kernel/system/: acpi.rs  acpi_methods.rs  fadt.rs  mod.rs
operating-system/src/mb2/: mod.rs
operating-system/src/memory/: allocator.rs  frame_allocator.rs  global_allocator.rs  mapper.rs  memory_map.rs  mod.rs  uefi_allocator.rs
operating-system/src/multitasking/: mod.rs
operating-system/src/system/: acpi_methods.rs  apic.rs  gdt.rs  interrupts.rs  mod.rs
operating-system/src/system/acpi/: fadt.rs  header.rs  madt.rs  rsdp.rs
operating-system/src/tables/: fadt.rs  rsdp.rs  rsdt.rs  uefi.rs
operating-system/src/uefi/: memory_map.rs  mod.rs
src/: bootloader.asm  bootx64.efi  kernel.c  kernel.cpp  kernel.nim  linker.ld  main.asm  main.rs
src/include/: ErrorHandler.cpp  GraphicsController.cpp  bootloader.asm  definitions.asm  macros.asm
uefi-bootloader/: Cargo.toml
uefi-bootloader/src/: main.rs
