[package]
name = "operating-system"
version = "0.1.0"
authors = ["Matt Glen <mwg2202@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.4.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
uefi = "0.11.0"
multiboot2 = "0.10.1"
x86_64 = "0.14.3"
acpi = "2.3.1"
rsdp = "1.1.0"
aml = "0.13.0"
x2apic = "0.1.3"
rusttype = { version = "0.9.2", default-features = false, features = ["libm-math"]}
libm = "0.2.1"
linked_list_allocator = "0.9.0"
spin = "0.9.0"
log = "0.4.14"
