[package]
name = "uefi-bootloader"
version = "0.1.0"
authors = ["Matt Glen <mwg2202@yahoo.com>"]
edition = "2018"

[dependencies]
uefi = "0.7.0"
uefi-services = "0.4.0"
log = {version = "0.4.11", default-features = false}
volatile = "0.2.6"
spinning_top = "0.2.2"

lazy_static = {version = "1.0", features = ["spin_no_std"]}
